# tradingagent_enhanced

./: .gitignore  CLAUDE.md  FIXES_APPLIED.md  INTERACTIVE_USAGE.md  LAUNCH_UI.bat  OPTIMIZATION_FEATURE_STATUS.md  OPTIMIZATION_METHOD_SELECTION_PLAN.md  PORTFOLIO_CSV_FIX.md  PORTFOLIO_INTEGRATION_PLAN.md  PORTFOLIO_PARTIAL_DATA_FIX.md  QUICK_START_INTERACTIVE.md  QUICK_START_WATSONX.md  README.md  README_INTERACTIVE.md  README_ORIGINAL_BACKUP.md  README_WATSONX.md  RESTART_SERVER.bat  RUN_INTERACTIVE_UI.bat  RUN_WATSONX_TEST.bat  START_UI_SIMPLE.bat  WATSONX_INTEGRATION_COMPLETE.md  WATSONX_INTEGRATION_SUMMARY.md  WATSONX_SETUP.md  config_watsonx_example.env  diagnose_issue.py  fix_syntax.py  flask_chat_app.py  main_chat_watsonx.py  main_enterprise.py  main_enterprise_watsonx.py  main_interactive_watsonx.py  pyproject-watsonx.toml  pyproject.toml  requirements.txt  run_portfolio_analysis.py  run_portfolio_watsonx.py  setup_watsonx_env.bat  setup_watsonx_env.sh  single_stock_analysis.py  test_interactive_system.py  (+6 more)
.claude/: settings.local.json
cli/: utils.py
docker_deployment/: Dockerfile  docker-compose.yml
docs/: analyst_architecture_diagrams.md  portfolio_system_architecture.md  project_architecture_diagram.md  user_workflow_diagram.md
portfolio_cache/2025-10-03/: stocks_summary.json
portfolio_results/2025-09-15/: portfolio_report_2025-09-15.html
portfolio_results/2025-10-03/: portfolio_analysis_2025-10-03.md
portfolio_results/2025-10-09/: portfolio_analysis_2025-10-09.md
static/: chat.html
templates/: index.html
tradingagents/: default_config.py
(+94 files in other folders)
